Changes to be committed: 	modified:   Portfolio.html 	new file:   css/style.css 	new file:   js/script.js 	deleted:    style.css

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
-<html>
-    <head>
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Alexis Pidjo</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <script defer src="./js/script.js"></script>
 </head>
 <body>
-<h1>Bienvenue sur mon Portfolio</h1>
-<p> Vous êtes sur le portfolio d'Alexis Pidjo étudiant en premiere année de BTS Service Informatique aux Organisations au lycée Dick Ukeiwe</p>
+    <header>
+        <h1 class="fade-in">Alexis Pidjo</h1>
+        <nav>
+            <ul>
+                <li><a href="#accueil">Accueil</a></li>
+                <li><a href="#cv">CV</a></li>
+                <li><a href="#projets">Projets</a></li>
+                <li><a href="#competences">Compétences</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="accueil" class="section fade-in">
+        <h2>Bienvenue !</h2>
+        <p>
+            Je suis Alexis Pidjo, 18 ans, étudiant en 1ère année de BTS SIO au lycée Dick Ukeiwe. 
+            Ce site est un aperçu interactif de mon parcours et de mes compétences dans le domaine informatique.
+        </p>
+    </section>
+
+    <section id="cv" class="section fade-in">
+        <h2>Mon CV</h2>
+        <p>Formation, expériences professionnelles, diplômes, etc.</p>
+        <!-- Tu peux ajouter un lien vers un PDF ou un CV visuel ici -->
+    </section>
+
+    <section id="projets" class="section fade-in">
+        <h2>Mes Projets</h2>
+        <p>Liste de projets réalisés pendant mes études, stages ou personnels.</p>
+    </section>
+
+    <section id="competences" class="section fade-in">
+        <h2>Compétences</h2>
+        <ul>
+            <li>HTML / CSS / JavaScript</li>
+            <li>Réseaux et sécurité</li>
+            <li>Base de données</li>
+            <li>Python, Java</li>
+        </ul>
+    </section>
+
+    <section id="contact" class="section fade-in">
+        <h2>Contact</h2>
+        <p>Vous pouvez me contacter à : <a href="mailto:alexis@example.com">alexis@example.com</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Alexis Pidjo - Portfolio personnel</p>
+    </footer>
 </body>
 </html>
