--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,10 +14,12 @@
         <nav>
             <ul>
                 <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#cv">CV</a></li>
+                <li><a href="#Expérience Professionnelle">Expérience Professionnelle</a></li>
+                <li><a href="#scolarité">Scolarité</a></li>
                 <li><a href="#projets">Projets</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#contact">Contact</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -30,10 +32,38 @@
         </p>
     </section>
 
-    <section id="cv" class="section fade-in">
-        <h2>Mon CV</h2>
-        <p>Formation, expériences professionnelles, diplômes, etc.</p>
+    <section id="Expérience Professionnelle" class="section fade-in">
+        <h2>Mes Expérience Professionnelle</h2>
+        <p><strong> Stage d'observation (2021)</strong><br>
+            Service technique et logistique de la DPASS.<br>
+            Maintenance des locaux dans les centres médicaux sociaux du grand Nouméa.
+            Préparation et livraison du matériel aux centres médico sociaux.
+        </p>
+        <p> <strong>Professionnelle (2023)</strong><br>
+            Assistant vendeur et conseiller chez Mr.Bricolage.<br>
+            Conseil et accompagnement du client.
+            Approvisionnement des rayons.
+            Étiquettage des différents produits.
+        </p>
         <!-- Tu peux ajouter un lien vers un PDF ou un CV visuel ici -->
+
+
+    </section>
+
+    <section id="Scolarité" class="section fade-in">
+        <h2>Mon parcours Scolaire</h2>
+        <p>
+            <strong> Lycéee Dick Ukeiwë.</strong> <br>
+             2025-2026<br>
+            BTS Service Informatique aux Organisations. <br>
+            2024<br>
+            Terminale STMG option système d'information et de gestion.<br>
+            Obtention du Bac STMG option système d'information et de gestion.<br>
+
+            <strong>Collège de Normandie</strong> <br>
+            2018 - 2021<br>
+            Obtention du Diplôme National du Brevet des collèges<br>
+        </p>
     </section>
 
     <section id="projets" class="section fade-in">
@@ -47,17 +77,20 @@
             <li>HTML / CSS / JavaScript</li>
             <li>Réseaux et sécurité</li>
             <li>Base de données</li>
-            <li>Python, Java</li>
+            <li>Python</li>
         </ul>
     </section>
 
     <section id="contact" class="section fade-in">
         <h2>Contact</h2>
-        <p>Vous pouvez me contacter à : <a href="mailto:alexis@example.com">alexis@example.com</a></p>
+        <p><a href="https://github.com/ncKaza">Github</a></p>
+        <p><a href="mailto:alexis.pidjo@gmail.com">alexis.pidjo@gmail.com</a></p>
+        <p><a href="https://www.linkedin.com/in/alexis-pidjo-903a0b362/">LinkedIn</a>  </p>
+        <h3>N'hésitez pas à me joindre si vous souhaitez échanger ! </h3>
     </section>
 
     <footer>
-        <p>&copy; 2025 Alexis Pidjo - Portfolio personnel</p>
+        <p>&copy; 2025 Alexis Pidjo  - Portfolio personnel</p>
     </footer>
 </body>
 </html>
