--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,96 +1,101 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Alexis Pidjo</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    <script defer src="./js/script.js"></script>
-</head>
-<body>
-    <header>
-        <h1 class="fade-in">Alexis Pidjo</h1>
-        <nav>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portfolio - Alexis Pidjo</title>
+        <link rel="stylesheet" href="./styles/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+        <script defer src="./js/app.js"></script>
+    </head>
+    <body>
+        <header>
+            <h1 class="fade-in">Alexis Pidjo</h1>
+            <nav>
+                <ul>
+                    <li><a href="#accueil">Accueil</a></li>
+                    <li><a href="#Expérience Professionnelle">Expérience Professionnelle</a></li>
+                    <li><a href="#Scolarité">Scolarité</a></li>
+                    <li><a href="#projets">Projets</a></li>
+                    <li><a href="#competences">Compétences</a></li>
+                    <li><a href="#contact">Contact</a></li>
+
+                </ul>
+            </nav>
+        </header>
+
+        <section id="accueil" class="section fade-in">
+            <h2>Bienvenue sur mon <strong>Portoflio</strong> bien tranquille !</h2>
+            <p>
+                Je suis Alexis Pidjo, 18 ans, étudiant en 1ère année de BTS SIO au lycée Dick Ukeiwe. 
+                Ce site est un aperçu interactif de mon parcours et de mes compétences dans le domaine informatique.
+            </p>
+        </section>
+
+        <section id="Expérience Professionnelle" class="section fade-in">
+            <h2>Mes Expérience Professionnelle</h2>
+            <p><strong> Stage d'observation (2021)</strong><br>
+                Service technique et logistique de la DPASS.<br>
+                Maintenance des locaux dans les centres médicaux sociaux du grand Nouméa.
+                Préparation et livraison du matériel aux centres médico sociaux.
+            </p>
+            <p> <strong>Professionnelle (2023)</strong><br>
+                Assistant vendeur et conseiller chez Mr.Bricolage.<br>
+                Conseil et accompagnement du client.
+                Approvisionnement des rayons.
+                Étiquettage des différents produits.
+            </p>
+            <!--AJOUT DU CV EN PDF -->
+
+
+        </section>
+
+        <section id="Scolarité" class="section fade-in">
+            <h2>Mon parcours Scolaire</h2>
+            <p>
+                <strong> Lycéee Dick Ukeiwë.</strong> <br>
+                 2025-2026<br>
+                BTS Service Informatique aux Organisations. <br>
+                2024<br>
+                Terminale STMG option système d'information et de gestion.<br>
+                Obtention du Bac STMG option système d'information et de gestion.<br>
+
+                <strong>Collège de Normandie</strong> <br>
+                2018 - 2021<br>
+                Obtention du Diplôme National du Brevet des collèges<br>
+            </p>
+        </section>
+
+        <section id="projets" class="section fade-in">
+            <h2>Mes Projets</h2>
+            <p>Liste de projets réalisés pendant mes études, stages ou personnels.<br>
+               <li>Dataviz Challenge</li> 
+               <li>Semaine du Numérique</li> 
+                <li>Hackagou</li> 
+            </p>
+        </section>
+
+        <section id="competences" class="section fade-in">
+            <h2>Compétences</h2>
             <ul>
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#Expérience Professionnelle">Expérience Professionnelle</a></li>
-                <li><a href="#scolarité">Scolarité</a></li>
-                <li><a href="#projets">Projets</a></li>
-                <li><a href="#competences">Compétences</a></li>
-                <li><a href="#contact">Contact</a></li>
-                
+                <li>HTML / CSS / JavaScript</li>
+                <li>Réseaux et sécurité</li>
+                <li>Base de données</li>
+                <li>Python</li>
             </ul>
-        </nav>
-    </header>
+        </section>
 
-    <section id="accueil" class="section fade-in">
-        <h2>Bienvenue !</h2>
-        <p>
-            Je suis Alexis Pidjo, 18 ans, étudiant en 1ère année de BTS SIO au lycée Dick Ukeiwe. 
-            Ce site est un aperçu interactif de mon parcours et de mes compétences dans le domaine informatique.
-        </p>
-    </section>
+        <section id="contact" class="section fade-in">
+            <h2>Contact</h2>
+            <p><a href="https://github.com/ncKaza">Github</a></p>
+            <p><a href="mailto:alexis.pidjo@gmail.com">alexis.pidjo@gmail.com</a></p>
+            <p><a href="https://www.linkedin.com/in/alexis-pidjo-903a0b362/">LinkedIn</a>  </p>
+            <h3>N'hésitez pas à me joindre si vous souhaitez échanger ! </h3>
+        </section>
 
-    <section id="Expérience Professionnelle" class="section fade-in">
-        <h2>Mes Expérience Professionnelle</h2>
-        <p><strong> Stage d'observation (2021)</strong><br>
-            Service technique et logistique de la DPASS.<br>
-            Maintenance des locaux dans les centres médicaux sociaux du grand Nouméa.
-            Préparation et livraison du matériel aux centres médico sociaux.
-        </p>
-        <p> <strong>Professionnelle (2023)</strong><br>
-            Assistant vendeur et conseiller chez Mr.Bricolage.<br>
-            Conseil et accompagnement du client.
-            Approvisionnement des rayons.
-            Étiquettage des différents produits.
-        </p>
-        <!-- Tu peux ajouter un lien vers un PDF ou un CV visuel ici -->
+        <footer>
+            <p>&copy; 2025 Alexis Pidjo  - Portfolio personnel</p>
+        </footer>
+    </body>
 
-
-    </section>
-
-    <section id="Scolarité" class="section fade-in">
-        <h2>Mon parcours Scolaire</h2>
-        <p>
-            <strong> Lycéee Dick Ukeiwë.</strong> <br>
-             2025-2026<br>
-            BTS Service Informatique aux Organisations. <br>
-            2024<br>
-            Terminale STMG option système d'information et de gestion.<br>
-            Obtention du Bac STMG option système d'information et de gestion.<br>
-
-            <strong>Collège de Normandie</strong> <br>
-            2018 - 2021<br>
-            Obtention du Diplôme National du Brevet des collèges<br>
-        </p>
-    </section>
-
-    <section id="projets" class="section fade-in">
-        <h2>Mes Projets</h2>
-        <p>Liste de projets réalisés pendant mes études, stages ou personnels.</p>
-    </section>
-
-    <section id="competences" class="section fade-in">
-        <h2>Compétences</h2>
-        <ul>
-            <li>HTML / CSS / JavaScript</li>
-            <li>Réseaux et sécurité</li>
-            <li>Base de données</li>
-            <li>Python</li>
-        </ul>
-    </section>
-
-    <section id="contact" class="section fade-in">
-        <h2>Contact</h2>
-        <p><a href="https://github.com/ncKaza">Github</a></p>
-        <p><a href="mailto:alexis.pidjo@gmail.com">alexis.pidjo@gmail.com</a></p>
-        <p><a href="https://www.linkedin.com/in/alexis-pidjo-903a0b362/">LinkedIn</a>  </p>
-        <h3>N'hésitez pas à me joindre si vous souhaitez échanger ! </h3>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Alexis Pidjo  - Portfolio personnel</p>
-    </footer>
-</body>
 </html>
