--- a/Portfolio.html
+++ b/Portfolio.html
@@ -36,14 +36,14 @@
             <h2>Mes Expérience Professionnelle</h2>
             <p><strong> Stage d'observation (2021)</strong><br>
                 Service technique et logistique de la DPASS.<br>
-                Maintenance des locaux dans les centres médicaux sociaux du grand Nouméa.
-                Préparation et livraison du matériel aux centres médico sociaux.
+                <li>Maintenance des locaux dans les centres médicaux sociaux du grand Nouméa.</li>
+                <li>Préparation et livraison du matériel aux centres médico sociaux.</li>
             </p>
             <p> <strong>Professionnelle (2023)</strong><br>
                 Assistant vendeur et conseiller chez Mr.Bricolage.<br>
-                Conseil et accompagnement du client.
-                Approvisionnement des rayons.
-                Étiquettage des différents produits.
+                <li>Conseil et accompagnement du client.</li>
+                <li>Approvisionnement des rayons.</li>
+                <li>Étiquettage des différents produits.</li>
             </p>
             <!--AJOUT DU CV EN PDF -->
 
@@ -87,9 +87,9 @@
 
         <section id="contact" class="section fade-in">
             <h2>Contact</h2>
-            <p><a href="https://github.com/ncKaza">Github</a></p>
+            <p><a href="https://github.com/ncKaza"target="_blank">Github</a></p>
             <p><a href="mailto:alexis.pidjo@gmail.com">alexis.pidjo@gmail.com</a></p>
-            <p><a href="https://www.linkedin.com/in/alexis-pidjo-903a0b362/">LinkedIn</a>  </p>
+            <p><a href="https://www.linkedin.com/in/alexis-pidjo-903a0b362/"target="_blank">LinkedIn</a>  </p>
             <h3>N'hésitez pas à me joindre si vous souhaitez échanger ! </h3>
         </section>
 
