--- a/Portfolio.html
+++ b/Portfolio.html
@@ -24,6 +24,16 @@
             </nav>
         </header>
 
+            <div class="slider">
+                <img src="img/photo.jpg" class="slider-background">
+                <div class="slider-content">
+                <h1> Pidjo Alexis</h1>
+                <p>Etudiant en BTS SIO option SLAM</p>
+
+
+
+            </div>
+
         <section id="accueil" class="section fade-in">
             <h2>Bienvenue sur mon <strong>Portoflio</strong> bien tranquille !</h2>
             <p>
