--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio - Alexis Pidjo</title>
-        <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="styles/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-        <script defer src="./js/app.js"></script>
+        <script defer src="js/app.js"></script>
     </head>
     <body>
         <header>
@@ -23,16 +23,6 @@
                 </ul>
             </nav>
         </header>
-
-            <div class="slider">
-                <img src="img/photo.jpg" class="slider-background">
-                <div class="slider-content">
-                <h1> Pidjo Alexis</h1>
-                <p>Etudiant en BTS SIO option SLAM</p>
-
-
-
-            </div>
 
         <section id="accueil" class="section fade-in">
             <h2>Bienvenue sur mon <strong>Portoflio</strong> bien tranquille !</h2>
