--- a/Portfolio.html
+++ b/Portfolio.html
@@ -69,22 +69,44 @@
         <section id="projets" class="section fade-in">
             <h2>Mes Projets</h2>
             <p>Liste de projets réalisés pendant mes études, stages ou personnels.<br>
-               <li>Dataviz Challenge</li> 
-               <li>Semaine du Numérique</li> 
+                <li>Dataviz Challenge</li> 
+                <li>Semaine du Numérique</li> 
                 <li>Hackagou</li> 
             </p>
         </section>
 
         <section id="competences" class="section fade-in">
             <h2>Compétences</h2>
-            <ul>
-                <li>HTML / CSS / JavaScript</li>
-                <li>Réseaux et sécurité</li>
-                <li>Base de données</li>
-                <li>Python</li>
-            </ul>
+            <div class="competence-group">
+                <div class="competence-block" id="frontend">
+                    <h3>Front-end</h3>
+                    <ul>
+                        <li>JavaScript</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <!-- Ici tu pourras ajouter des images plus tard -->
+                    </ul>
+                </div>
+                <div class="competence-block" id="backend">
+                    <h3>Back-end</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>PHP</li>
+                        <li>MySQL</li>
+                        <li>Java</li>
+                        <!-- Ici tu pourras ajouter des images plus tard -->
+                    </ul>
+                </div>
+                <div class="competence-block" id="design">
+                    <h3>Design</h3>
+                    <ul>
+                        <li>Capcut</li>
+                        <li>Photoshop</li>
+                        <!-- Ici tu pourras ajouter des images plus tard -->
+                    </ul>
+                </div>
+            </div>
         </section>
-
         <section id="contact" class="section fade-in">
             <h2>Contact</h2>
             <p><a href="https://github.com/ncKaza"target="_blank">Github</a></p>
