--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,11 +9,13 @@
         <script defer src="js/app.js"></script>
     </head>
     <body>
+        <canvas id="animated-bg"></canvas>
+    <!-- ...existing code... -->
         <header>
             <h1 class="fade-in">Alexis Pidjo</h1>
             <nav>
                 <ul>
-                    <li><a href="#accueil">Accueil</a></li>
+                    <li><a href="#Apropos">À propos</a></li>
                     <li><a href="#Expérience Professionnelle">Expérience Professionnelle</a></li>
                     <li><a href="#Scolarité">Scolarité</a></li>
                     <li><a href="#projets">Projets</a></li>
@@ -24,11 +26,15 @@
             </nav>
         </header>
 
-        <section id="accueil" class="section fade-in">
+        <section id="Apropos" class="section fade-in">
             <h2>Bienvenue sur mon <strong>Portoflio</strong> bien tranquille !</h2>
+            <h3>À propos</h3>
             <p>
-                Je suis Alexis Pidjo, 18 ans, étudiant en 1ère année de BTS SIO au lycée Dick Ukeiwe. 
-                Ce site est un aperçu interactif de mon parcours et de mes compétences dans le domaine informatique.
+            Je m’appelle Alexis Pidjo, j’ai 18 ans et je suis étudiant en première année de BTS SIO, option SLAM (Solutions Logicielles et Applications Métiers) au lycée Dick Ukeiwe.<br>
+            Passionné d’informatique et de jeux vidéo depuis mon enfance, il m’a toujours semblé naturel de m’orienter vers ce domaine. Curieux et autonome, j’aime chercher des solutions par moi-même et apprendre continuellement de nouvelles choses.<br>
+            Sportif depuis toujours, j’ai eu l’opportunité de pratiquer différents sports, notamment la boxe, qui m’a inculqué rigueur et persévérance.<br>
+            Je maîtrise également l’anglais, un atout précieux pour progresser dans le monde de l’informatique.<br>
+            Ce site est une vitrine interactive de mon parcours et de mes compétences dans ce domaine.<br>      
             </p>
         </section>
 
@@ -101,7 +107,6 @@
                     <h3>Design</h3>
                     <ul>
                         <li>Capcut</li>
-                        <li>Photoshop</li>
                         <!-- Ici tu pourras ajouter des images plus tard -->
                     </ul>
                 </div>
